--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -172,11 +172,11 @@
     "description": ""
   },
   "feedback#top_para_2": {
-    "message": "Many problems can be fixed by downloading the latest version. You can <a class=\"newVersionURL\" href=\"#\">download the latest version by clicking here</a>, or you can send an email to <span id=\"newVersionEmail\"></span>.",
+    "message": "Many problems can be fixed by downloading the latest version. You can <a class=\"NewVersionURL\" href=\"#\">download the latest version by clicking here</a>, or you can send an email to <a class=\"NewVersionEmail\" href=\"#\"></a>.",
     "description": ""
   },
   "feedback#top_para_3": {
-    "message": "You can also find solutions to many common problems in our <a class=\"faqURL\" href=\"#\">Frequently Asked Questions</a>.",
+    "message": "You can also find solutions to many common problems in our <a class=\"FaqURL\" href=\"#\">Frequently Asked Questions</a>.",
     "description": ""
   },
   "feedback#smiley_happy": {
@@ -196,7 +196,7 @@
     "description": ""
   },
   "feedback#diagnostic_check": {
-    "message": "Upload diagnostic data. Please note that this diagnostic data does not identify you, and it will help us to keep Psiphon running smoothly. <a class=\"dataCollectionInfoURL\" href=\"#\">Click here to see what data we collect.</a>",
+    "message": "Upload diagnostic data. Please note that this diagnostic data does not identify you, and it will help us to keep Psiphon running smoothly. <a class=\"DataCollectionInfoURL\" href=\"#\">Click here to see what data we collect.</a>",
     "description": ""
   },
   "feedback#submit_button": {
@@ -204,7 +204,7 @@
     "description": ""
   },
   "feedback#text_feedback_bottom_para": {
-    "message": "If the above form is not working, or you would like to send screenshots, please email us at <a id=\"emailAddress\" href=\"mailto:feedback+android@psiphon.ca\">feedback+android@psiphon.ca</a>",
+    "message": "If the above form is not working, or you would like to send screenshots, please email us at <a id=\"FeedbackEmailAddress\" href=\"mailto:feedback+windows@psiphon.ca\">feedback+windows@psiphon.ca</a>.",
     "description": ""
   },
   "feedback#messages#show-debug-label": {
