--- a/src/webui/_locales/locale-names.json
+++ b/src/webui/_locales/locale-names.json
@@ -18,6 +18,7 @@
   "nb": "Norsk (bokmål)",
   "pl": "Polski",
   "pt_BR": "Português(Br)",
+  "pt_PT": "Português(Pt)",
   "ru": "Русский",
   "sv": "Svenska",
   "zh": "中文",
